# Kotha

./: .env.example  .gitignore  .prettierignore  README.md  build-app.sh  build-binaries.sh  bun.lockb  electron-builder.config.js  eslint.config.mjs  package.json  vite-env.d.ts
.cursor/rules/: always.mdc
.github/workflows/: app-deploy.yml  build.yml  deploy-server.yml  infra-deploy.yml
.husky/: pre-commit
app/: app.tsx  renderer.tsx
app/hooks/: useGlobalShortcut.ts
app/store/: useAdvancedSettingsStore.ts  useDictionaryStore.ts  useOnboardingStore.ts  useSettingsStore.ts
app/styles/: globals.css  window.css
app/utils/: keyboard.ts
lib/__tests__/: setup.ts
lib/auth/: config.ts  events.ts
lib/clients/: grpcClient.test.ts  grpcClient.ts
lib/constants/: external-links.ts
lib/main/: app.ts  logger.ts  main.ts  store.test.ts  store.ts  syncService.test.ts  syncService.ts  traceLogger.test.ts  traceLogger.ts  transcriptionService.test.ts  transcriptionService.ts  voiceInputService.test.ts  voiceInputService.ts
lib/media/: audio.ts  keyboard.test.ts  keyboard.ts  text-reader.ts  text-writer.ts
lib/preload/: api.ts  index.d.ts
lib/protocol/: index.ts
lib/window/: ipcEvents.test.ts  ipcEvents.ts
native/audio-recorder/: Cargo.toml
native/global-key-listener/: Cargo.toml
native/global-key-listener/src/: main.rs
native/text-writer/: Cargo.toml
resources/binaries/: focused-text-reader  global-key-listener
server/: .env.example  Dockerfile  README.md  bun.lockb  docker-compose.yml  package.json
server/infra/: cdk.context.json  package.json  (+1 more)
(+55 files in other folders)
